--- a/taotao/taotao-manager-web/src/main/webapp/WEB-INF/wansuBlog/css/style.css
+++ b/taotao/taotao-manager-web/src/main/webapp/WEB-INF/wansuBlog/css/style.css
@@ -463,7 +463,7 @@ padding:80px 0;
   border: none;
   -webkit-appearance: none;
 }
-.news form input[type="submit"] {
+.news form input[type="button"] {
   background: #323b43;
   padding: 13px 10px 12px 10px;
   margin-top: 0px;
@@ -481,7 +481,7 @@ padding:80px 0;
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
 }
-.news form input[type="submit"]:hover{
+.news form input[type="button"]:hover{
 color:#76b852;  
 }
 .button {
@@ -706,7 +706,7 @@ color:#76b852;
 	.news form input[type="text"] {
 	  padding: 11px 15px;
 	  }
-	.news form input[type="submit"] {
+	.news form input[type="button"] {
 	  padding: 9px 10px 8px 10px;
 	  }
 	.get-info p {
@@ -838,7 +838,7 @@ color:#76b852;
 	.wel-grid:nth-child(4), .wel-grid:nth-child(5), .wel-grid:nth-child(6) {
 	  margin-top: 35px;
 	}
-	.news form input[type="submit"] {
+	.news form input[type="button"] {
 	  padding: 8px 10px 8px 10px;
 	  font-size: 16px;
 	  }
@@ -977,7 +977,7 @@ color:#76b852;
 	.wel-grid:nth-child(4), .wel-grid:nth-child(5), .wel-grid:nth-child(6) {
 	  margin-top: 35px;
 	}
-	.news form input[type="submit"] {
+	.news form input[type="button"] {
 	  padding: 8px 10px 8px 10px;
 	  font-size: 16px;
 	  }
@@ -1074,14 +1074,14 @@ color:#76b852;
 	.about-info h3, .skill-info h2, .gallery h3, .ser-head h3, .news h3, .get-info h3 {
 	  font-size: 30px;
 	}
-	.news form input[type="submit"] {
+	.news form input[type="button"] {
 	  padding: 8px 10px 8px 10px;
 	  font-size: 14px;
 	}
 	.na-m {
 	  width: 61%;
 	}
-	.news form input[type="submit"] {
+	.news form input[type="button"] {
 	  padding: 9px 10px 9px 10px;
 	  }
 	.get-info h4 {
