导航换成pizza图片

--- a/taotao/taotao-manager-web/src/main/webapp/WEB-INF/wansuBlog/css/style.css
+++ b/taotao/taotao-manager-web/src/main/webapp/WEB-INF/wansuBlog/css/style.css
@@ -1334,3 +1334,9 @@ padding:0;
   }
 }
 /*-- //responsive media queries --*/
+
+.pizza_img{
+    width:100px;
+    height:100px;
+    border-radius:100px;
+}
